[gd_scene load_steps=3 format=3 uid="uid://nd4limp6prtd"]

[ext_resource type="Script" path="res://event_editor/nodes/transport/transport_gn.gd" id="1_m57q5"]

[sub_resource type="LabelSettings" id="LabelSettings_teuit"]
font_size = 12
font_color = Color(0.27451, 0.439216, 0.584314, 1)

[node name="TransportNode" type="GraphNode"]
offset_left = 106.0
offset_top = 213.0
offset_right = 417.0
offset_bottom = 408.0
mouse_filter = 1
position_offset = Vector2(-671, -413)
title = "场景移动"
ignore_invalid_connection_type = true
slot/0/left_enabled = true
slot/0/left_type = 0
slot/0/left_color = Color(1, 1, 1, 1)
slot/0/left_icon = null
slot/0/right_enabled = true
slot/0/right_type = 0
slot/0/right_color = Color(1, 1, 1, 1)
slot/0/right_icon = null
slot/0/draw_stylebox = true
script = ExtResource("1_m57q5")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(0, 120)
layout_mode = 2

[node name="TipLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "提示：目标点需要输入坐标Vector2i"
label_settings = SubResource("LabelSettings_teuit")

[node name="Line1" type="HSplitContainer" parent="VBoxContainer"]
layout_mode = 2
split_offset = 385

[node name="Label" type="Label" parent="VBoxContainer/Line1"]
layout_mode = 2
text = "目标场景"

[node name="HSplitContainer" type="HSplitContainer" parent="VBoxContainer/Line1"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/Line1/HSplitContainer"]
layout_mode = 2
text = "空"

[node name="Button" type="Button" parent="VBoxContainer/Line1/HSplitContainer"]
layout_mode = 2
text = "选取"

[node name="Line4" type="HSplitContainer" parent="VBoxContainer"]
layout_mode = 2
split_offset = 385

[node name="Label" type="Label" parent="VBoxContainer/Line4"]
layout_mode = 2
text = "是否移动角色"

[node name="CheckBox" type="CheckBox" parent="VBoxContainer/Line4"]
layout_mode = 2

[node name="Line2" type="HSplitContainer" parent="VBoxContainer"]
visible = false
layout_mode = 2
split_offset = 385

[node name="Label" type="Label" parent="VBoxContainer/Line2"]
layout_mode = 2
text = "目标点"

[node name="OptionButton" type="OptionButton" parent="VBoxContainer/Line2"]
visible = false
layout_mode = 2

[node name="HSplitContainer" type="HSplitContainer" parent="VBoxContainer/Line2"]
layout_mode = 2
collapsed = true

[node name="SpinBox" type="SpinBox" parent="VBoxContainer/Line2/HSplitContainer"]
layout_mode = 2
min_value = -100.0
prefix = "x"

[node name="SpinBox2" type="SpinBox" parent="VBoxContainer/Line2/HSplitContainer"]
layout_mode = 2
min_value = -100.0
prefix = "y"

[node name="Line3" type="HSplitContainer" parent="VBoxContainer"]
layout_mode = 2
split_offset = 385

[node name="Label" type="Label" parent="VBoxContainer/Line3"]
layout_mode = 2
text = "淡入淡出"

[node name="OptionButton" type="OptionButton" parent="VBoxContainer/Line3"]
layout_mode = 2
selected = 0
item_count = 2
popup/item_0/text = "启用"
popup/item_1/text = "禁用"
popup/item_1/id = 1
